--- a/README.org
+++ b/README.org
@@ -61,3 +61,111 @@ What to include in each mini-function?  Consider
 - The argument-passing style enabled in deferred.el among others, where you can use the return value from each function as input for the next function, sounds elegant but I've found it awful for debugging (perhaps I was missing some tooling).
   - I recommend instead the "crude" approach of keeping state in external variables that you can inspect along the way, making it easy to figure out what work a broken chain did or didn't get done.  This approach also helps clarify the intent of your code because you have to name those variables.
 # For code that need to manipulate Emacs state a lot or cross-reference many variables, like my [[https://github.com/meedstrom/deianira/blob/master/deianira.el][deianira.el]], it helped me a lot.
+
+* Roll your own
+
+The following example snippet shows a way you can write your own solution.
+
+When I first wrote asyncloop, I didn't know about either =input-pending-p= or =while-no-input=, which would have been key.  Emacs Lisp is full of power tools laying forgotten under sofa cushions.
+
+Now, the intent of this package is still to give you a nice DX (developer experience) and reduce boilerplate.
+
+But no matter how popular this package gets, I can stand on the soapbox of this README so less people have to retrace my steps!  Here's how you do it!
+
+Your very own asyncloop in three s-exps:
+
+#+begin_src elisp
+(cl-defstruct (queue (:constructor queue-create)
+                     (:copier nil))
+  fns)
+
+(defun eat (queue)
+  (funcall (car (queue-fns queue)))
+  (pop (queue-fns queue))
+  (if (queue-fns queue)
+      (eat queue)
+    (message "All done"))
+  nil)
+
+(defun resume (queue)
+  (when (while-no-input (eat queue))
+    (message "Pausing for a moment")
+    (run-with-idle-timer 1 nil #'resume queue)))
+#+end_src
+
+Now let's test the program!
+
+#+begin_src elisp
+(setq full-fns (list
+                (lambda () (sit-for .4) (message "foo"))
+                (lambda () (sit-for .4) (message "bar"))
+                (lambda () (sit-for .4) (message "baz"))
+                (lambda () (sit-for .4) (message "zab"))
+                (lambda () (sit-for .4) (message "rab"))
+                (lambda () (sit-for .4) (message "oof"))))
+
+;; Test like this. Watch *Messages* and try to interrupt with some input.
+(progn
+  (setq my-queue (queue-create :fns full-fns))
+  (resume my-queue))
+#+end_src
+
+*** Refinement
+
+Here's a version of =eat= that should grow the call-stack more slowly, but only in cases where you programmatically add a very large number of functions at once to =(queue-fns my-queue)= and then run =resume=.
+
+#+begin_src elisp
+(defun eat (queue)
+  (or
+   (cl-loop repeat (length (queue-fns queue))
+            if (queue-fns queue)
+            do (progn
+                 (funcall (car (queue-fns queue)))
+                 (pop (queue-fns queue)))
+            else do (message "All done") and return t)
+   (null (queue-fns queue))
+   (eat queue)))
+#+end_src
+
+In the more common case where you only add one function at a time (typically a function that adds itself when it sees that there's more work to do) while the queue runs, the above makes no difference.
+
+What you can do is simply prune the call stack every 100 calls or so.  So here's a different version of =eat=:
+
+#+begin_src elisp
+(setq recursion-ctr 0)
+(defun eat (queue)
+  (funcall (car (queue-fns queue)))
+  (pop (queue-fns queue))
+  (if (queue-fns queue)
+      (if (> 100 (cl-incf recursion-ctr))
+          (eat queue)
+        (setq recursion-ctr 0)
+        (run-with-timer .01 nil #'eat queue)
+        nil)
+    (eat queue)
+    (message "All done"))
+  nil)
+#+end_src
+
+With this version, the cl-loop rewrite should be superfluous.  However, I suspect that whenever you can predetermine that you have, say, 2000 function calls to make, Emacs Lisp can execute them faster thru cl-loop than thru the recursion method.
+
+That's just a suspicion I haven't tested, but if it's true, we can merge the two methods:
+
+#+begin_src elisp
+(setq recursion-ctr 0)
+(defun eat (queue)
+  (or
+   (cl-loop repeat (length (queue-fns queue))
+            if (queue-fns queue)
+            do (progn
+                 (funcall (car (queue-fns queue)))
+                 (pop (queue-fns queue)))
+            else do (message "All done") and return t)
+   (null (queue-fns queue))
+   ;; Prune the call stack when recursion depth hits 100.
+   (if (> 100 (cl-incf recursion-ctr))
+       (eat queue)
+     (setq recursion-ctr 0)
+     (run-with-timer .01 nil #'eat queue)
+     nil)))
+#+end_src
